# chit-mates

./: README.md  docker-compose.yml
.github/: copilot-instructions.md
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: dependencies.py  router.py
backend/app/api/routes/: __init__.py  game.py  leaderboard.py  rooms.py  ws.py
backend/app/core/: config.py
backend/app/db/: base.py  session.py
backend/app/game/: engine.py  state.py
backend/app/models/: __init__.py  enums.py  game.py  room.py  user.py
backend/app/realtime/: __init__.py  chat_manager.py  events.py  server.py  voice_manager.py
backend/app/schemas/: common.py  game.py  room.py  user.py
backend/app/services/: event_bus.py  game_service.py  leaderboard_service.py  room_service.py  utils.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  game.ts  leaderboard.ts  rooms.ts
frontend/src/components/: ChatPanel.tsx  VoicePanel.tsx
frontend/src/hooks/: useRoomSocket.ts
frontend/src/routes/: GameBoardPage.tsx  HomePage.tsx  LeaderboardPage.tsx  LobbyPage.tsx
frontend/src/services/: socketIo.ts  websocket.ts
frontend/src/store/: useGameStore.ts
frontend/src/types/: api.ts  realtime.ts
